feat-rf07-rn01-criado-endpoint-consulta-estoque-de-farmacia